[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
tokio = { version = "1.35.1", features = ["io-util"] }
pin-project = "1.1.3"
futures-util = { version = "0.3.29", default-features = false }
base64-url = "2.0.1"
bytes = "1.5.0"
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }
serde_json = "1.0.110"
reqwest = { version = "0.11.23", features = ["json"] }
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
js-sys = { version = "0.3.63", wasm-bindgen = "0.2.86" }
#wasm-bindgen-futures = "0.4.39"

[dependencies.web-sys]
version = "0.3.63"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[profile.release]
lto = true
strip = true
codegen-units = 1
